Some spacing issues with selected facet

--- a/app/assets/stylesheets/components/_drs_facets.scss
+++ b/app/assets/stylesheets/components/_drs_facets.scss
@@ -254,3 +254,14 @@ a.facet_select{
 .sorting select {
   margin: 5px;
 }
+
+.dropdown-menu span.selected{
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 20px;
+  span{
+    margin-top: 0;
+  }
+}
